Created Save functionality in Editor. Edited DataController accordingly: DBLoadLastArticle, DBSendNewArticle, DBEditArticle And edited MainController: saveArticle and createArticle